--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ h1 {
     margin-bottom: 20px;
     width: 90%;
     max-width: 1200px;
+    overflow: visible;
+
 }
 
 .category,
@@ -184,9 +186,11 @@ h1 {
     }
 }
 
+
 @media (max-width: 480px) {
     #jeopardy-board {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(2, 1fr);
+
     }
 
     .category,
